re PR c++/38543 ([C++0x] Cannot specialize variadic template function)

PR c++/38543
	* pt.c (determine_specialization): Instead of comparing the number
	of parms, check that tsubst gives the right answer.

From-SVN: r186522